<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sweets_homepage"
    android:background="@drawable/background_home">
    



    <!--ABOUT US SECTION-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            <!--NAV BAR-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Title Text-->
                <TextView
                    android:id="@+id/title_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/title_main"
                    android:textColor="@color/black"
                    android:textSize="40sp"/>

                <!--Cart Button-->
                <ImageButton
                    android:id="@+id/cart"
                    android:layout_width="0dp"
                    android:layout_height="61dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/cart"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <!--About Us Title-->
            <TextView
                android:id="@+id/about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/about_us"
                android:textSize="20sp" />

            <!--About us Text-->
            <TextView
                android:id="@+id/about_us_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/about_us_text"
                android:textSize="11sp" />

            <ImageView
                android:id="@+id/side_image"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_marginStart="15sp"
                android:layout_marginTop="20sp"
                android:alpha="?android:attr/primaryContentAlpha"
                android:src="@drawable/side"
                tools:targetApi="o" />


            <!-- CONTENT SECTION-->
            <TextView
                android:id="@+id/order_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:text="@string/order_now"
                android:textSize="20sp" />

            <!--Cupcake Card-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Cards"
                android:background="#99000000">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cupcake_card_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="left"
                    android:layout_marginStart="15dp"
                    card_view:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/cupcake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        card_view:srcCompat="@drawable/cupcakes" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Cupcake Title-->
                    <TextView
                        android:id="@+id/cupcake_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:baselineAligned="false"
                        android:text="@string/cupcake_text"
                        android:textSize="16sp" />

                    <!--Cupcake Description-->
                    <TextView
                        android:id="@+id/cupcake_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:baselineAligned="false"
                        android:text="@string/cupcake_description"
                        android:textSize="11sp" />

                    <!--Spinner Title-->
                    <TextView
                        android:id="@+id/spinner_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:baselineAligned="false"
                        android:text="@string/spinner_title"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/spinnerflavor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="#3C2C2525"
                        android:entries="@array/cupcake_flavors"
                        android:popupBackground="#CD000000" />
                    <TextView
                        android:id="@+id/spinner_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"

                        android:baselineAligned="false"
                        android:text="@string/spinner_size"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/spinnersize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="#3C2C2525"
                        android:entries="@array/cupcake_size"
                        android:popupBackground="#CD000000" />

                    <Button
                        android:id="@+id/cupcake_addtocart"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/cupcake_addtocart"
                        android:visibility="visible" />


                </LinearLayout>

            </LinearLayout>

            <!--Macaroons Card-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:theme="@style/Cards"
                android:background="#99000000">

                <androidx.cardview.widget.CardView
                    android:id="@+id/macaroons_card_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:paddingTop="30dp"
                    android:layout_gravity="left"
                    android:layout_marginStart="15dp"
                    card_view:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/macaroons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        card_view:srcCompat="@drawable/macaroons" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Cupcake Title-->
                    <TextView
                        android:id="@+id/macaroons_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:baselineAligned="false"
                        android:text="@string/macaroons_text"
                        android:textSize="16sp" />

                    <!--Cupcake Description-->
                    <TextView
                        android:id="@+id/macaroons_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:baselineAligned="false"
                        android:text="@string/macaroons_description"
                        android:textSize="11sp" />

                    <!--Spinner Title-->
                    <TextView
                        android:id="@+id/macaroons_spinner_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:baselineAligned="false"
                        android:text="@string/spinner_title"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/macaroonsspinnerflavor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="#3C2C2525"
                        android:entries="@array/macaroons_flavors"
                        android:popupBackground="#CD000000"/>
                    <TextView
                        android:id="@+id/macaroons_spinner_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"

                        android:baselineAligned="false"
                        android:text="@string/spinner_size"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/macaroonsspinnersize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="#3C2C2525"
                        android:entries="@array/macaroons_size"
                        android:popupBackground="#CD000000" />

                    <Button
                        android:id="@+id/macaroons_addtocart"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/macaroons_addtocart"
                        android:visibility="visible" />


                </LinearLayout>

            </LinearLayout>

            <!--cake Card-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="70dp"
                android:theme="@style/Cards"
                android:background="#99000000">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cake_card_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="left"
                    android:layout_marginStart="15dp"
                    card_view:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/cake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        card_view:srcCompat="@drawable/wedding_cakes" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Cupcake Title-->
                    <TextView
                        android:id="@+id/cake_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:baselineAligned="false"
                        android:text="@string/cake_text"
                        android:textSize="16sp" />

                    <!--Cupcake Description-->
                    <TextView
                        android:id="@+id/cake_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:baselineAligned="false"
                        android:text="@string/cake_description"
                        android:textSize="11sp" />

                    <!--Spinner Title-->
                    <TextView
                        android:id="@+id/cake_spinner_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:baselineAligned="false"
                        android:text="@string/spinner_title"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/cakespinnerflavor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="#3C2C2525"
                        android:entries="@array/cake_flavors"
                        android:popupBackground="#CD000000" />
                    <TextView
                        android:id="@+id/cake_spinner_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"

                        android:baselineAligned="false"
                        android:text="@string/spinner_size"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/cakespinnersize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:entries="@array/cake_size"
                        android:popupBackground="#CD000000" />

                    <Button
                        android:id="@+id/cake_addtocart"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/cake_addtocart"
                        android:visibility="visible" />


                </LinearLayout>

            </LinearLayout>

        
        </LinearLayout>

    </ScrollView>

</FrameLayout>


